<resources>
    <string name="app_name">Jobao</string>
    <string name="title_home">Home</string>
    <string name="title_add_job">New Application</string>
    <string name="title_edit_job">Edit Application</string>
    <string name="recent_applies">recent applies</string>
    <string name="recent_activity">recent activity</string>
    <string name="cd_add_button">add button</string>
    <string name="company_name">company name</string>
    <string name="position_title">position title</string>
    <string name="date_applied">date applied</string>
    <string name="add_application">new application</string>
    <string name="edit_application">edit application</string>
    <string name="sent_with_cover_letter">sent with cover letter</string>
    <string name="applied_via">applied via</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="required_field">required</string>
    <string name="select_date">select date</string>
    <string-array name="applied_via_array">
        <item>Site</item>
        <item>Email</item>
        <item>Reference</item>
        <item>Linkedin</item>
        <item>Other</item>
    </string-array>
    <string-array name="sent_with_cover_letter_array">
        <item>no</item>
        <item>yes</item>
    </string-array>
    <string-array name="status_array">
        <item>Pending</item>
        <item>In Process</item>
        <item>Rejected</item>
        <item>Accepted</item>
    </string-array>
    <string name="applications">Applications</string>
    <string name="search_application">search..</string>
    <string name="some_data">Some Data</string>
    <string name="sort">sort</string>
    <string name="sort_by_name">sort by company</string>
    <string name="sort_by_title">sort by title</string>
    <string name="sort_by_date">sort by creation date</string>
    <string name="sort_by_status">sort by status</string>
    <string name="hide_declined">hide rejects</string>
    <string name="job_deleted">application deleted</string>
    <string name="undo">UNDO</string>
    <string name="created_at">Created: %1$s </string>
    <string name="status">status</string>
    <string name="add_success">application added!</string>
    <string name="edit_success">application saved!</string>
    <string name="pending">Pending</string>
    <string name="in_process">In Process</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="company_view_error">invalid company name</string>
    <string name="title_view_error">invalid title</string>
    <string name="date_view_error">invalid date</string>
    <string name="site">site</string>
    <string name="email">email</string>
    <string name="reference">reference</string>
    <string name="confirmation_exit">confirm exit</string>
    <string name="confirmation_exit_msg">Are you sure you wish to exit?</string>
    <string name="cancel">cancel</string>
    <string name="date">%1$d/%2$d/%3$d</string>
    <string name="applications_status">My applications status</string>
    <string name="dates">Last 7 days activity</string>
    <string name="total_application">%1$s applications</string>
    <string name="total_replies">%1$s total replies</string>
    <string name="total_processes">%1$s processes</string>
    <string name="total_pending">%1$s pending</string>
    <string name="active_processes">%1$s active </string>
    <string name="total_offers">%1$s offers </string>
    <string name="date_dialog">Date</string>
    <string name="dashboard">Dashboard</string>
    <string name="activity">Activity</string>
    <string name="add_note">note</string>
    <string name="part_time">part time </string>
    <string name="long_submission">long submission process </string>
    <string name="remote_job">remote </string>
    <string name="next_to_train">next to the train </string>
    <string name="startup">start-up </string>
    <string name="only_if_u_want">Charts valuable fields</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="cancel_title">Go back?</string>
    <string name="cancel_message">Your changes will not be saved, continue anyway?</string>
    <string name="linkedin">Linkedin</string>
    <string name="other">Other</string>
    <string name="applied_via_of_process">Data from the companies I had process with</string>
    <string name="applied_via_pie_chart_title">Data from all the companies I applied to</string>
    <string name="is_cover_letter_sent_chart_title">Cover letter distribution</string>
    <string name="cover_letter_sent">Sent</string>
    <string name="cover_letter_not_sent">Was not sent</string>
    <string name="more">More</string>
    <string name="send_to_mail">Send to mail box</string>
    <string name="rate_us">Rate us</string>
    <string name="job_submissions">My Job submissions</string>
    <string name="email_send_error">Oops! we could not send email :(</string>
    <string name="had_process">Was there a process with company?</string>
    <string name="declined_date">Declined date</string>
    <string name="note">Note</string>
    <string name="csv_created_at">created at</string>
    <string name="no_data_text">Not enough data</string>
    <string name="fab">fab</string>
    <string name="user_had_process">had process</string>
    <string name="user_did_not_had_process">had no process</string>
    <string name="cover_letter_sent_and_replied">sent letter and replied</string>
    <string name="cover_letter_sent_and_not_replied">sent letter and not replied</string>
    <string name="cover_letter_not_sent_and_replied">didn\'t sent letter and replied</string>
    <string name="cover_letter_not_sent_and_not_replied">didn\'t sent letter and not replied</string>
    <string name="offers_title">Offers</string>
    <string name="active_process_title">Active Processes</string>



</resources>