<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search_application"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:icon="@drawable/ic_baseline_sort_24"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_sort_by_name"
                android:title="@string/sort_by_name" />
            <item
                android:id="@+id/action_sort_by_date"
                android:title="@string/sort_by_date" />

            <item
                android:id="@+id/action_sort_by_status"
                android:title="@string/sort_by_status" />
        </menu>

    </item>
    <item
        android:id="@+id/action_hide_declined_jobs"
        android:checkable="true"
        app:showAsAction="never"
        android:title="@string/hide_declined" />


</menu>